# pt

./: .gitignore  LICENSE  README.md  job.json  pt.cabal  stack.yaml
app/: Main.hs
src/: Grid.hs  Ising.hs  Lattice.hs  Metropolis.hs  Statistics.hs
test/: Metropolis.hs
